--- a/gb/22/12/29/n13894512.md
+++ b/gb/22/12/29/n13894512.md
@@ -6,18 +6,15 @@
 <h6>2022年12月29日，株式会社Saroru的老板高桥修治首次在日本福冈市观赏神韵后，他愉悦地表示“看的很开心”。（王文亮／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2022年12月30日讯】（大纪元记者牛彬日本福冈市报导）美国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团12月29日晚间，在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC%E7%A6%8F%E5%86%88%E5%A4%AA%E9%98%B3%E5%AE%AB%E9%A5%AD%E5%BA%97%E9%9F%B3%E4%B9%90%E5%8E%85.md#1">日本福冈太阳宫饭店&amp;音乐厅</a>（Fukuoka Sunpalace Hotel &amp; Hall）展开了在当地的第一场演出。经营餐饮业的高桥修治首次观赏神韵后，愉悦地表示“看得很开心”。</p>
+	<p>【大纪元2022年12月30日讯】（大纪元记者牛彬日本福冈市报导）美国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团12月29日晚间，在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC%E7%A6%8F%E5%86%88%E5%A4%AA%E9%98%B3%E5%AE%AB%E9%9F%B3%E4%B9%90%E5%8E%85.md#1">日本福冈太阳宫音乐厅</a>（Fukuoka Sunpalace）展开了在当地的第一场演出。经营餐饮业的高桥修治首次观赏神韵后，愉悦地表示：“看得很开心。”</p>
 <p>高桥修治（Takahashi Shuji）是株式会社Saroru的老板，旗下拥有逾十家的乡村特色餐厅。首次接触<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>艺术，他盛赞神韵演员高超精湛的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>技巧，果然与众不同。</p>
-<p>“以前（神韵）来福冈巡回演出过，但是我之前错过了演出。这次机会也是很难得的，所以今天我很享受。”高桥修治说，此次终于如愿观赏神韵。</p>
-<p>对于神韵<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>的感受，高桥修治形容，“（神韵舞蹈）有气势，动作非常整齐划一，而且很有味道。”</p>
+<p>“以前（神韵）来福冈巡回演出过，但是我之前错过了演出。这次机会也是很难得的，所以今天我很陶醉。”高桥修治说，此次终于如愿观赏神韵。</p>
+<p>对于神韵<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>的感受，高桥修治形容，“（神韵舞蹈）有气势，动作非常整齐划一，而且很有韵味。”</p>
 <p>高桥修治对长袖舞的节目印象特别深刻，他赞赏地说，“女舞蹈演员的长袖舞，我觉得特别好看。”他认为，这样的舞蹈充满着传统的韵味。</p>
 <p>尤其看到舞蹈演员展现的精湛且高难度技巧，他表示，“我事先在Youtube上看了一些（介绍）影片，（神韵演员们）果然是经过了相当的练习，所以我觉得非常好。”</p>
 <p>还有，高科技<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>跟传统的舞蹈结合在一起，“那画面更加明亮，很有趣，没有看过，所以觉得很新鲜，我看得很开心。”高桥修治愉悦地说。</p>
 <p>责任编辑：李沐恩#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893870.md#1">销售总监一家观神韵 感受言论自由的宝贵</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13893944.md#1">保护传统文化很重要 公司总裁极力推荐神韵</a></li>
@@ -26,36 +23,30 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13893975.md#1">连锁超市老板观神韵 感悟应思考传统与信仰</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13893992.md#1">神韵引领回归传统 医疗工程主管感受美好</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/15/n11942655.md#1" target="_blank">毛泽东73岁生日自杀的周小舟</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11403596.md#1" target="_blank">澳纽正义之声汇入全球反迫害之洪势</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/11/n11446216.md#1" target="_blank">夏祷：2019火种：天象巨变（2）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/11/29/n10882266.md#1" target="_blank">中共绑架法轮功学员 美国务院：停止迫害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893016.md#1">《推背图》预言江泽民死亡和其后瘟疫惨象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890128.md#1">【未解之谜】糖的真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890728.md#1">【百年真相】十万人命当儿戏 中共大规模杀人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/9/n13881213.md#1">白虎下凡保大唐 历尽艰辛兑誓约（三）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13891849.md#1">【未解之谜】预言家珍妮之一 肯尼迪家族的“诅咒”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895382.md#1">【马克时空】SpaceX 2022再破纪录 星盾计划受瞩目</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894708.md#1">【秦鹏观察】幽灵兔预言2023？网易年终盘点爆火</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894372.md#1">【十字路口】2023中共五大败象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893060.md#1">谷爱凌力压梅西成年度运动员 中国网民炸锅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893815.md#1">意大利：中国飞米兰的乘客近一半感染病毒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893026.md#1">被疫情海啸压垮 北京医生：我们不是铁人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893064.md#1">舒淇返台低调搭高铁 与林心如惊喜玩自拍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893138.md#1">知名演员潘德民去世 曾出演众多红色电影</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13894733.md#1">黄安曝中国殡仪馆火化大排长龙 网民诉惨状</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893835.md#1">徐娇自嘲感染“炫饭株” 晒病照喊“被饿醒”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893094.md#1">何韵诗举办网上音乐会 唱《春夏秋冬》表牵挂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894250.md#1">美国73岁男子以喷射客机为家 实现年少梦想</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893287.md#1">小狗能活多久？ 哪个品种的寿命最长？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893675.md#1">尿频影响睡眠 3种常见夜尿症及治疗方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/12/n13883334.md#1">不再让酒精伤肝 养肝护肝全攻略</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894434.md#1">含维生素K1的绿叶蔬菜可降低晚年骨折风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140085.md#1">金陵之会 王安石苏轼一笑泯恩仇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142273.md#1">二个图谶  当前天象的大预言</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14139954.md#1">【古道人生】穷女婿被岳父辱骂 反而得了大财</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137486.md#1">良玉不琢不成器 太上老君寻传人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14142748.md#1">社交场合如何与陌生人互动</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14145892.md#1">【时事金扫描】中共抓“绿光”间谍 火箭坠民宅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14145989.md#1">【十字路口】中共介选台湾 为何找上五月天？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145278.md#1">【环球直击】盘点中共对台介选 传逼五月天表态</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145149.md#1">25岁小伙投80万上海开面馆 6天濒临倒闭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145118.md#1">【时事军事】被连续击落的Su-34是什么来头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145378.md#1">河南一中学生突然死亡 传当地民众齐抗议讨说法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145750.md#1">才被爆遭施压表态亲中 五月天贴“异动通知”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144188.md#1">亲共艺人黄安不满中国除夕不放假 网民热议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14145064.md#1">汪小菲现重大财务危机 被执行标的达748万元</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145856.md#1">胡海泉等明星名人财产遭强制执行 涉资金上亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144974.md#1">汤唯圣诞节晒夫妻甜蜜合照 破除婚变传闻</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：家庭智能守护小卫士 半价抱回家</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">巴黎欧莱雅彩妆 自然光泽 打造全天容光焕发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141673.md#1">膝关节疼痛发炎？中医3招让膝盖回春 多用20年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144179.md#1">香蕉减肥 早上吃还是晚上吃好？3个技巧很关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/7/n14132024.md#1">8成心血管病可预防 中医荐12类清血管最佳食物</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/29/n13894512.htm">餐厅老板观神韵：舞蹈技巧精湛 与众不同</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894512.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
