--- a/gb/23/12/30/n14147166.md
+++ b/gb/23/12/30/n14147166.md
@@ -14,19 +14,17 @@
 <p>环保局呼吁营建业主及承包商都能配合相关规范并做好工地自主管理，降低工地陈情及提升市民生活品质，若有任何工程施工时污染相关疑问，或相关规范之疑问，欢迎拨打嘉义市政府环境保护局洽询电话: 052251775 *220 *221诚挚为您服务。</p>
 <p>责任编辑：玉珍</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/9/29/n12438552.md#1">营建工地防制更AI  中华邮政物流把工程变环保</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/3/31/n12847925.md#1">桃市营建工地地下水回收再利用 强化用水效益</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/1/7/n13488179.md#1">嘉义市预先辅导辖内营建工地 避免业者受罚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/10/n13992814.md#1">美学设计融入街景 嘉市空品感测器全面汰换</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146379.md#1">嘉义市湖美商展嘉义夜市摊贩集中场 核准设置</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146365.md#1">嘉义市政府人事处卸、新任处长交接</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146349.md#1">国中男生接种的HPV疫苗是人类乳突病毒疫苗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146343.md#1">寒冬送暖  60位爱心人士 集资送家扶232床棉被</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146340.md#1">嘉市元旦假期正常收运垃圾 大家一起做环保</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146321.md#1">守护儿少行善一生 透过捐款传达蔡议员大爱</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/3/10/n11102523.md#1" target="_blank">马吉卫：难以平复的伤疤</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/23/n10081583.md#1" target="_blank">九旬老太自己洗衣做饭 打破医生20年前判定</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/12/28/n11751711.md#1" target="_blank">张林：青少年被迫加入抗美援朝志愿军</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/17/n11390870.md#1" target="_blank">胡平：20年烈火 法轮功屹立不倒成“真金”</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
